Create integration tests